# TheLittleInvaders

./: .clang-tidy  .gitignore  CMakeLists.txt  LittleInvaders.sln  README.md
Code/Common/: CSVReader.h  Common.vcxproj  Common.vcxproj.filters  GameTimer.cpp  IFramework.h  IGame.h  IGraphicContainer.h  IGraphicItem.h  IGraphicTextfield.h  InputKey.h  LibraryHandler.cpp  Picture.cpp  Point.cpp  Size.cpp  Size.h  stdafx.h
Code/Engine/: EasyPlatform.cpp  EasyPlatform.h  Engine.vcxproj  Engine.vcxproj.filters  EngineDll.cpp  Framework.cpp  Framework.h  GraphicBitmap.cpp  GraphicContainer.cpp  GraphicItem.h  GraphicTextfield.cpp  PlatformFactory.cpp  PlatformFactory.h  VariablesManager.cpp  VariablesManager.h
Code/Game/: Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  GameDll.cpp  GameStateCommon.h  GameStateInGame.cpp  GameStateInGame.h  GameStatePostGame.cpp  GameStatePreGame.cpp
Code/Launcher/: Launcher.vcxproj  main.cpp
Release/data/: Thumbs.db
output/: system.csv  variables.csv
src/common/: BaseListenerHandler.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  ContainersUtils.h  GameTimer.cpp  GameTimer.h  IFramework.h  IGame.h  IGraphicBitmap.h  IGraphicContainer.h  IGraphicItem.h  IGraphicTextfield.h  IPlatform.h  IPlatformManager.h  ISystemGlobalEnvironment.h  IVariable.h  IVariablesManager.h  InputKey.h  LibraryHandler.cpp  LibraryHandler.h  MathUtils.h  Path.cpp  Path.h  Picture.cpp  Picture.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  stdafx.h
src/engine/: CMakeLists.txt  EasyPlatform.cpp  EasyPlatform.h  EngineDll.cpp  Framework.cpp  Framework.h  GraphicBitmap.cpp  GraphicBitmap.h  GraphicContainer.cpp  GraphicContainer.h  GraphicItem.cpp  GraphicItem.h  GraphicTextfield.cpp  GraphicTextfield.h  PlatformFactory.cpp  PlatformFactory.h  VariablesManager.cpp  VariablesManager.h
src/game/: CMakeLists.txt  Game.cpp  Game.h  GameDll.cpp  GameStateCommon.h  GameStateInGame.cpp  GameStateInGame.h  GameStatePostGame.cpp  GameStatePostGame.h  GameStatePreGame.cpp  GameStatePreGame.h
src/launcher/: CMakeLists.txt  main.cpp
src/utilities/: CMakeLists.txt  CSVReader.cpp  ContainersUtils.h  GameTimer.cpp  GameTimer.h  IFramework.h  IGraphicBitmap.h  IGraphicItem.h  IPlatform.h  IPlatformManager.h  ISystemGlobalEnvironment.h  IVariable.h  IVariablesManager.h  LibraryHandler.cpp  Path.cpp  Path.h  Picture.cpp  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Size.h
